word-wrap in p-rep list address, removed footer in P-Rep List, fixed same message loading on different voting

--- a/Frontend/src/Containers/Home/SlantedHeader/PRepListModal/PRepListModal.module.css
+++ b/Frontend/src/Containers/Home/SlantedHeader/PRepListModal/PRepListModal.module.css
@@ -28,6 +28,7 @@
 
  .address {
     color: #262626;
+    word-wrap: break-word;
  }
 
  .link:hover {
